--- a/lua/.luarc.json
+++ b/lua/.luarc.json
@@ -1,4 +1,7 @@
 {
     "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
+    "Lua.diagnostics.disable": [
+        "assign-type-mismatch"
+    ],
     "Lua.workspace.checkThirdParty": false
 }
